build: run on the Java 25 LTS
The engine runs sagas on virtual threads, and a JDBC driver holds a
monitor across each protocol exchange. On JDK 21 that pins the carrier
for the length of every query, so effective database concurrency is
capped at the number of carriers rather than at the pool size. JEP 491
(JDK 24) removes exactly this pinning, so both halves of the project
move to the next LTS: the image runs a 25 JRE, and the toolchain
compiles and tests at 25.

core and server therefore emit Java 25 bytecode, which makes 25 the
floor for embedding core. The published SDK surface is untouched: api,
rpc and client keep --release 8, which still works under a 25 toolchain,
so the Java 8 path for applications that cannot move is unchanged. CI,
the release workflows and .java-version follow the toolchain.

The start script gains --enable-native-access=ALL-UNNAMED. sqlite-jdbc
and Netty's epoll transport both load a native library, which JDK 24
made a restricted operation: without the flag the JVM warns at boot, and
a future release will block the call outright, dropping gRPC to NIO and
failing SQLite entirely. ALL-UNNAMED is the only granularity available,
since the distribution ships a flat classpath rather than named modules.

Two unused variables become _, for the UnnamedVariable check Error Prone
raises only once the target supports it. The warning count is otherwise
unchanged from main.

Verified by booting the distribution on the 25 JRE: /health 200, the
epoll native mapped, and a clean SIGTERM drain. The assembled image was
not booted as a unit locally; the two image jobs in CI cover that.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CwKFY479DNqzBvGMwS9cTH